# framelock

./: .env.example  .gitignore  README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  pyproject.toml
docs/: DECISIONS.md  DEMO_VOICEOVER.md  FAL_DOCUMENTATION_RESEARCH.md  FRAMELOCK_AI_SOURCE_BUILD_GOAL.md  FRAMELOCK_BUILD_GOAL.md  FRAMELOCK_MOTION_BUILD_GOAL.md  FRAMELOCK_PLAN.md  HARDENED_SYNTHETIC_REPLAY.md  HUMAN_HANDOFF.md  LOCAL_DOD_AUDIT.md  README.md  SUBMISSION_PACKAGE.md
scripts/: build-mask-preview.py  construct-motion-source.py  motion-fal-io.mjs  motion-fal-request.mjs  prepare-motion-vace-plans.mjs  prepare-motion-vace-plans.test.ts
src/: proxy.ts
src/app/: corrupt-proof-fixture.test.tsx  corrupt-proof-fixture.tsx  demo-comparison.test.tsx  demo-comparison.tsx  error.tsx  globals.css  layout.tsx  page.test.tsx  page.tsx  real-job-workspace.test.tsx  real-job-workspace.tsx  verified-synchronized-playback.test.tsx  verified-synchronized-playback.tsx
src/framelock_media/: __init__.py  ai_source.py  artifacts.py  cli.py  color.py  composite.py  contract.py  exports.py  masks.py  (+15 more)
tests/: test_ai_source.py  test_color.py  test_composite_and_verifier.py  test_contract.py  test_corruption_fixture.py  test_exports.py  test_fal_lineage.py  test_frm01_release.py  test_generation_gate.py  test_mask_preview.py  test_mask_transport_evidence.py  test_masks.py  test_media_pipeline.py  test_motion_admission.py  test_motion_proof.py  test_motion_source.py  test_real_proof.py  test_source_audio.py  test_source_preparation.py  test_temporal_matte.py
(+141 files in other folders)
