[project]
name = "framelock-media"
version = "0.1.0"
description = "Deterministic offline media proof kernel for FrameLock"
requires-python = ">=3.14,<3.15"
dependencies = [
  "numpy==2.5.1",
  "opencv-python-headless==5.0.0.93",
  "pillow==12.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.1.1",
]

[project.scripts]
framelock-media = "framelock_media.cli:main"

[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/framelock_media"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
pythonpath = ["src"]
testpaths = ["tests"]
